--- a/app/views/retirement_assumptions/new.html.erb
+++ b/app/views/retirement_assumptions/new.html.erb
@@ -105,7 +105,7 @@
           User
         </label>
 
-        <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @retirement_assumption.user_id %>">
+        <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :age, @retirement_assumption.user_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-success">
