--- a/app/views/net_worths/index.html.erb
+++ b/app/views/net_worths/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= net_worth.asset_total.stocks_and_stock_funds %></td>
         <td><%= net_worth.liabilities_total.mortgage %></td>
         <td><%= net_worth.calculated_net_worth %></td>
-        <td><%= net_worth.user_id %></td>
+        <td><%= net_worth.user.age %></td>
         <td><%= net_worth.net_worth_date %></td>
         <td>
           <a href="/net_worths/<%= net_worth.id %>" class="btn btn-primary">Show</a>
