--- a/app/views/retirement_assumptions/index.html.erb
+++ b/app/views/retirement_assumptions/index.html.erb
@@ -42,5 +42,6 @@
       </tr>
       <% end %>
     </table>
+    <%= paginate @retirement_assumptions, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
