--- a/app/views/retirement_calculations/index.html.erb
+++ b/app/views/retirement_calculations/index.html.erb
@@ -26,5 +26,6 @@
       </tr>
       <% end %>
     </table>
+    <%= paginate @retirement_calculations, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
