--- a/app/views/retirement_calculations/show.html.erb
+++ b/app/views/retirement_calculations/show.html.erb
@@ -6,7 +6,13 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Assumptions</dt>
-      <dd><%= @retirement_calculation.assumptions_id %></dd>
+      <dd>
+        <% if @retirement_calculation.assumptions.present? %>
+          <a href="/retirement_assumptions/<%= @retirement_calculation.assumptions_id %>">
+            <%= @retirement_calculation.assumptions.age_id %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Calculation by month</dt>
       <dd><%= @retirement_calculation.calculation_by_month %></dd>
