--- a/app/views/liabilities/index.html.erb
+++ b/app/views/liabilities/index.html.erb
@@ -3,6 +3,102 @@
     Liabilities
     <a href="/liabilities/new" class="btn btn-lg btn-success">New Liability</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => "collapse", :id => "liabilities_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+  <%= f.label :mortgage, "Mortgage" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :mortgage_gteq, :class => "form-control", :placeholder => "Mortgage greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :mortgage_lteq, :class => "form-control", :placeholder => "Mortgage less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <%= f.label :liabilities_total_cont, "Liabilities total contains" %>
+    <%= f.text_field :liabilities_total_cont, :class => "form-control", :placeholder => "Liabilities total contains" %>
+  </div>
+
+<div class="form-group">
+  <%= f.label :credit_cards, "Credit cards" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :credit_cards_gteq, :class => "form-control", :placeholder => "Credit cards greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :credit_cards_lteq, :class => "form-control", :placeholder => "Credit cards less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :student_loan, "Student loan" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :student_loan_gteq, :class => "form-control", :placeholder => "Student loan greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :student_loan_lteq, :class => "form-control", :placeholder => "Student loan less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/liabilities" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#liabilities_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
