--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,125 @@
     Users
     <a href="/users/new" class="btn btn-lg btn-success">New User</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => "collapse", :id => "users_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+  <%= f.label :age, "Age" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :age_gteq, :class => "form-control", :placeholder => "Age greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :age_lteq, :class => "form-control", :placeholder => "Age less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <%= f.label :email_cont, "Email contains" %>
+    <%= f.text_field :email_cont, :class => "form-control", :placeholder => "Email contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :current_income_cont, "Current income contains" %>
+    <%= f.text_field :current_income_cont, :class => "form-control", :placeholder => "Current income contains" %>
+  </div>
+
+<div class="form-group">
+  <%= f.label :annual_savings, "Annual savings" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :annual_savings_gteq, :class => "form-control", :placeholder => "Annual savings greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :annual_savings_lteq, :class => "form-control", :placeholder => "Annual savings less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <%= f.label :individual_retirement_goal_cont, "Individual retirement goal contains" %>
+    <%= f.text_field :individual_retirement_goal_cont, :class => "form-control", :placeholder => "Individual retirement goal contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :individual_net_worth_cont, "Individual net worth contains" %>
+    <%= f.text_field :individual_net_worth_cont, :class => "form-control", :placeholder => "Individual net worth contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :last_name_cont, "Last name contains" %>
+    <%= f.text_field :last_name_cont, :class => "form-control", :placeholder => "Last name contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :first_name_cont, "First name contains" %>
+    <%= f.text_field :first_name_cont, :class => "form-control", :placeholder => "First name contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        <div class="form-group">
+  <%= f.label :age_id, "RetirementAssumption Age" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :retirement_assumptions_age_id_gteq, :class => "form-control", :placeholder => "RetirementAssumption Age greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :retirement_assumptions_age_id_lteq, :class => "form-control", :placeholder => "RetirementAssumption Age less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/users" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#users_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
